paperless/CiliumNetworkPolicy-tika.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tika
  namespace: paperless
spec:
  egress:
    - {}
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tika
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: paperless
      toPorts:
        - ports:
            - port: "9998"
              protocol: TCP
